	* Modified status icons in the 'List Affiliates' dialog to show
	affidavit state in davit(1).
2025-08-30 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in the 'List Affiliates' dialog in davit(1) that
	'Show Affiliates Missing' month and year dropdowns to fail to be
	disabled when the check box was unticked.
2025-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up enforcement of the 'Schedule Programs' and 'Add Remarks'
	permissions in 'Manage Affiliates' in davit(1).
2025-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the 'List Users' dialog to disable the 'Edit' and 'Delete'
	buttons when no user entry was selected in davit(1).
2025-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the 'List Providers' dialog to disable the 'Edit' and
	'Delete' buttons when no user entry was selected in davit(1).
2025-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'libreoffice-calc' dependency to the 'davit-gui' DEB
	package.
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed generation errors for various reports in davit(1).
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Added an icons for Networks in 'icons/network.xpm'.
	* Added an icons for Providers in 'icons/provider.xpm'.
	* Added an icons for Programs in 'icons/program.xpm'.
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Added an icons for Reports in 'icons/report.xpm'.
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Added an application icon for davit(1).
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.0.0rc1.
2025-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'postfix' dependency to the 'davit-gui' DEB package.
2025-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'DvtProfile' to use Exemplar v2.0.2.
	* Added a 'dvtwgmgr' helper app in 'utils/dvtwgmgr/'.
2025-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'dvtwgmgr' help to use '--up' and '--down' switches.